--- a/src/application/ZurbFoundationDotNetBase/Views/web.config
+++ b/src/application/ZurbFoundationDotNetBase/Views/web.config
@@ -19,7 +19,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
-        <add namespace="Web" />
+        <add namespace="ZurbFoundationDotNetBase" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
